<resources>
    <string name="app_name">To Do List</string>
    <string name="about">About</string>
    <string name="about_this_app">About this App</string>
    <string name="priority">Priority</string>
    <string name="add_task">Add Task</string>
    <string name="task_description">Task Description</string>
    <string name="task_name">Task Name</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="select_task_priority">Select Task Priority</string>
    <string name="update_task_description">Update Task Description</string>
    <string name="update_task_name">Update Task Name</string>
    <string name="update_task">Update Task</string>
    <string name="add">Add</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="select_priority">Select Priority</string>
    <string name="view_by_priority">View by Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="complete">Complete</string>
    <array name="priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </array>
</resources>
